vlib/v/checker/tests/sumtype_as_mismatched_type.vv
type Type = bool | int | string

fn main() {
	mut t := Type(123)
	v := t as &int
	t = 456
	println(v)
}
